--- a/TinkoffLab_shares/Base.lproj/Main.storyboard
+++ b/TinkoffLab_shares/Base.lproj/Main.storyboard
@@ -32,12 +32,11 @@
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1fG-9B-CUh">
                                 <rect key="frame" x="0.0" y="646" width="414" height="216"/>
                             </pickerView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="gRE-JE-gQc">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="gRE-JE-gQc">
                                 <rect key="frame" x="197" y="443" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Symbol:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdN-DJ-kTS">
-                                <rect key="frame" x="40" y="223.5" width="62" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Ticker -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdN-DJ-kTS">
+                                <rect key="frame" x="40" y="223.5" width="59" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -48,8 +47,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iaq-tz-ld3">
-                                <rect key="frame" x="40" y="274.5" width="43.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last price on " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iaq-tz-ld3">
+                                <rect key="frame" x="40" y="274.5" width="103" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -60,8 +59,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price change:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8J-XW-dJk">
-                                <rect key="frame" x="40" y="325.5" width="104" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily price change -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8J-XW-dJk">
+                                <rect key="frame" x="40" y="325.5" width="153" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -105,6 +104,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Cq1-RP-1rR" secondAttribute="trailing" constant="40" id="HDw-on-xPp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1fG-9B-CUh" secondAttribute="bottom" id="KSq-zM-WZ2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GVe-II-Rsz" secondAttribute="trailing" constant="40" id="MfK-8b-Qdf"/>
+                            <constraint firstItem="gRE-JE-gQc" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="RGt-w4-mWt"/>
                             <constraint firstItem="IdN-DJ-kTS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="U9N-BJ-g10"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DZh-AG-3YF" secondAttribute="trailing" constant="40" id="VQz-gs-MXc"/>
                             <constraint firstItem="1fG-9B-CUh" firstAttribute="top" secondItem="olt-kF-Lty" secondAttribute="bottom" constant="8" symbolic="YES" id="XiW-Du-gAj"/>
@@ -116,6 +116,7 @@
                             <constraint firstItem="jjs-rU-2or" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="jIB-q6-bMc"/>
                             <constraint firstItem="olt-kF-Lty" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jis-Tw-MYY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jjs-rU-2or" secondAttribute="trailing" constant="40" id="jpI-rj-0qU"/>
+                            <constraint firstItem="gRE-JE-gQc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="n0g-L9-R23"/>
                             <constraint firstItem="iaq-tz-ld3" firstAttribute="top" secondItem="IdN-DJ-kTS" secondAttribute="bottom" constant="30" id="oip-Kz-dI3"/>
                             <constraint firstItem="Z2d-a7-1g7" firstAttribute="top" secondItem="GVe-II-Rsz" secondAttribute="bottom" constant="21.5" id="qEu-ut-4NH"/>
                             <constraint firstItem="bfl-e3-vn2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="r8S-Dv-mfx"/>
@@ -128,6 +129,7 @@
                         <outlet property="companyNameLabel" destination="GVe-II-Rsz" id="V6y-fL-l4b"/>
                         <outlet property="companyPickerView" destination="1fG-9B-CUh" id="q04-Wi-pzW"/>
                         <outlet property="companySymbolLabel" destination="Z2d-a7-1g7" id="pk2-my-4Ob"/>
+                        <outlet property="lastDatePriceLabel" destination="iaq-tz-ld3" id="qHg-FG-Ajo"/>
                         <outlet property="logoImageView" destination="bfl-e3-vn2" id="a0p-DW-jEP"/>
                         <outlet property="networkErrorLabel" destination="olt-kF-Lty" id="GNE-8L-zyE"/>
                         <outlet property="priceChangeLabel" destination="DZh-AG-3YF" id="BAy-vY-12e"/>
